migrated validators to Symfony (except uploads following later)

--- a/production/de.guite.modulestudio.metamodel.edit.nl1.de/plugin_de.properties
+++ b/production/de.guite.modulestudio.metamodel.edit.nl1.de/plugin_de.properties
@@ -409,22 +409,42 @@ _UI_AbstractStringField_minLength_feature = Min Länge
 _UI_AbstractStringField_minLength_description = Die minimale Länge (0 für kein Minimum).
 _UI_AbstractStringField_regexp_feature = Regulärer Ausdruck
 _UI_AbstractStringField_regexp_description = Gegen einen regulären Ausdruck validieren.
+_UI_AbstractStringField_regexpOpposite_feature = Regexp Gegenteil
+_UI_AbstractStringField_regexpOpposite_description = Ob die Logik zur Prüfung von Regexp umgekehrt werden soll.
 _UI_AbstractStringField_sluggablePosition_feature = Sluggable-Position
 _UI_AbstractStringField_sluggablePosition_description = Position dieses Feldes im generierten Slug. Ein Wert von 0 steht für keine Berücksichtigung im Slug.
-_UI_StringField_country_feature = Land
-_UI_StringField_country_description = Ob dieses Feld einen Länder-Code repräsentiert oder nicht.
-_UI_StringField_language_feature = Sprache
-_UI_StringField_language_description = Ob dieses Feld einen Sprach-Code repräsentiert oder nicht.
 _UI_StringField_length_feature = Länge
 _UI_StringField_length_description = Die Länge dieses Feldes.
+_UI_StringField_country_feature = Land
+_UI_StringField_country_description = Ob dieses Feld einen Ländercode repräsentiert oder nicht.
+_UI_StringField_creditCard_feature = Kreditkarte
+_UI_StringField_creditCard_description = Ob dieses Feld einen Kreditkartennummer repräsentiert oder nicht.
+_UI_StringField_currency_feature = Währung
+_UI_StringField_currency_description = Ob dieses Feld einen Währungscode repräsentiert oder nicht.
+_UI_StringField_language_feature = Sprache
+_UI_StringField_language_description = Ob dieses Feld einen Sprachcode repräsentiert oder nicht.
+_UI_StringField_locale_feature = Sprachumgebung (Locale)
+_UI_StringField_locale_description = Ob dieses Feld eine Sprachumgebung (Locale) repräsentiert oder nicht.
 _UI_StringField_htmlcolour_feature = HTML-Farbe
 _UI_StringField_htmlcolour_description = Ob dieses Feld eine HTML-Farbe (wie #336699) repräsentiert oder nicht.
+_UI_StringField_iban_feature = Iban
+_UI_StringField_iban_description = Ob dieses Feld eine IBAN (Internationale Bankkontonummer) repräsentiert oder nicht.
+_UI_StringField_isbn_feature = Isbn
+_UI_StringField_isbn_description = Erlaubt die Einstellung, ob dieses Feld eine ISBN (Internationale Buchnummer) repräsentiert.
+_UI_StringField_issn_feature = Issn
+_UI_StringField_issn_description = Erlaubt die Einstellung, ob dieses Feld eine ISSN (Internationale Standardnummer) repräsentiert.
+_UI_StringField_ipAddress_feature = IP-Adresse
+_UI_StringField_ipAddress_description = Erlaubt die Einstellung, ob dieses Feld eine IP-Adresse repräsentiert.
 _UI_StringField_password_feature = Passwort
 _UI_StringField_password_description = Ob dieses Feld ein Kennwort repräsentiert oder nicht.
 _UI_TextField_length_feature = Länge
 _UI_TextField_length_description = Die Länge dieses Feldes.
 _UI_EmailField_length_feature = Länge
 _UI_EmailField_length_description = Die Länge dieses Feldes.
+_UI_EmailField_checkMX_feature = MX-Check
+_UI_EmailField_checkMX_description = Ob die Validität des MX-Records des gegebenen E-Mail-Hosts geprüft wird.
+_UI_EmailField_checkHost_feature = Host-Check
+_UI_EmailField_checkHost_description = Ob die Validität des MX- oder A- oder AAAA-Records des gegebenen E-Mail-Hosts geprüft wird.
 _UI_UrlField_length_feature = Länge
 _UI_UrlField_length_description = Die Länge dieses Feldes.
 _UI_UploadField_length_feature = Länge
@@ -439,6 +459,10 @@ _UI_UploadField_allowedFileSize_feature = Erlaubte Dateigröße
 _UI_UploadField_allowedFileSize_description = Die maximal erlaubte Dateigröße in Bytes (0 = kein Limit).
 _UI_ListField_length_feature = Länge
 _UI_ListField_length_description = Die Länge dieses Feldes.
+_UI_ListField_min_feature = Min
+_UI_ListField_min_description = Minimale Anzahl von Werten, deren Auswahl erzwungen wird (nur für Listen mit Mehrfachauswahl).
+_UI_ListField_max_feature = Max
+_UI_ListField_max_description = Maximale Anzahl von Werten, deren Auswahl erzwungen wird (nur für Listen mit Mehrfachauswahl).
 _UI_ListField_multiple_feature = Mehrfach
 _UI_ListField_multiple_description = Ob mehrere Einträge ausgewählt werden können oder nicht.
 _UI_ListField_useChecks_feature = Checkboxen verwenden
@@ -455,6 +479,10 @@ _UI_ArrayField_length_feature = Länge
 _UI_ArrayField_length_description = Die Länge dieses Feldes.
 _UI_ArrayField_arrayType_feature = Array-Typ
 _UI_ArrayField_arrayType_description = Welcher Array-Typ verwendet wird.
+_UI_ArrayField_min_feature = Min
+_UI_ArrayField_min_description = Minimale Anzahl von Einträgen, deren Vorhandensein erzwungen wird. Muss zusammen mit max verwendet werden.
+_UI_ArrayField_max_feature = Max
+_UI_ArrayField_max_description = Maximale Anzahl von Einträgen, deren Vorhandensein erzwungen wird. Muss zusammen mit min verwendet werden.
 _UI_AbstractDateField_past_feature = Vergangenheit
 _UI_AbstractDateField_past_description = Ob dieser Wert in der Vergangenheit liegen muss oder nicht.
 _UI_AbstractDateField_future_feature = Zukunft
@@ -525,6 +553,10 @@ _UI_OneToManyRelationship_indexBy_feature = Indiziert über
 _UI_OneToManyRelationship_indexBy_description = Optionaler Feldname, der für eine indizierte Assoziation benutzt wird.
 _UI_OneToManyRelationship_orphanRemoval_feature = Waisen entfernen
 _UI_OneToManyRelationship_orphanRemoval_description = Ob Waisen automatisch entfernt werden sollen oder nicht.
+_UI_OneToManyRelationship_minTarget_feature = Min Target
+_UI_OneToManyRelationship_minTarget_description = Minimale Anzahl von Einträgen, deren Vorhandensein auf der Zielseite erzwungen wird. Muss zusammen mit maxTarget verwendet werden.
+_UI_OneToManyRelationship_maxTarget_feature = Max Target
+_UI_OneToManyRelationship_maxTarget_description = Maximale Anzahl von Einträgen, deren Vorhandensein auf der Zielseite erzwungen wird. Muss zusammen mit minTarget verwendet werden.
 _UI_ManyToOneRelationship_primaryKey_feature = Primärschlüssel
 _UI_ManyToOneRelationship_primaryKey_description = Ob dies eine Primary Key Relation ist oder nicht.
 _UI_ManyToManyRelationship_refClass_feature = Ref.-Klasse
@@ -537,6 +569,14 @@ _UI_ManyToManyRelationship_indexBy_feature = Indiziert über
 _UI_ManyToManyRelationship_indexBy_description = Optionaler Feldname, der für eine indizierte Assoziation benutzt wird.
 _UI_ManyToManyRelationship_orphanRemoval_feature = Waisen entfernen
 _UI_ManyToManyRelationship_orphanRemoval_description = Ob Waisen automatisch entfernt werden sollen oder nicht.
+_UI_ManyToManyRelationship_minSource_feature = Min Source
+_UI_ManyToManyRelationship_minSource_description = Minimale Anzahl von Einträgen, deren Vorhandensein auf der Quellseite erzwungen wird. Muss zusammen mit maxSource verwendet werden.
+_UI_ManyToManyRelationship_maxSource_feature = Max Source
+_UI_ManyToManyRelationship_maxSource_description = Maximale Anzahl von Einträgen, deren Vorhandensein auf der Quellseite erzwungen wird. Muss zusammen mit minSource verwendet werden.
+_UI_ManyToManyRelationship_minTarget_feature = Min Target
+_UI_ManyToManyRelationship_minTarget_description = Minimale Anzahl von Einträgen, deren Vorhandensein auf der Zielseite erzwungen wird. Muss zusammen mit maxTarget verwendet werden.
+_UI_ManyToManyRelationship_maxTarget_feature = Max Target
+_UI_ManyToManyRelationship_maxTarget_description = Maximale Anzahl von Einträgen, deren Vorhandensein auf der Zielseite erzwungen wird. Muss zusammen mit minTarget verwendet werden.
 _UI_InheritanceRelationship_strategy_feature = Strategie
 _UI_InheritanceRelationship_strategy_description = Die für diese Relation zu verwendende Vererbungsstrategie.
 _UI_InheritanceRelationship_discriminatorColumn_feature = Discriminator Column
@@ -680,6 +720,28 @@ _UI_ApplicationDependencyType_RECOMMENDATION_literal = RECOMMENDATION
 _UI_ApplicationDependencyType_CONFLICT_literal = CONFLICT
 _UI_ModelLoadingType_CONSERVATIVE_literal = CONSERVATIVE
 _UI_ModelLoadingType_AGGRESSIVE_literal = AGGRESSIVE
+_UI_StringIsbnStyle_NONE_literal = NONE
+_UI_StringIsbnStyle_ISBN10_literal = ISBN10
+_UI_StringIsbnStyle_ISBN13_literal = ISBN13
+_UI_StringIsbnStyle_ALL_literal = ALL
+_UI_StringIssnStyle_NONE_literal = NONE
+_UI_StringIssnStyle_NORMAL_literal = NORMAL
+_UI_StringIssnStyle_CASE_SENSITIVE_literal = CASE_SENSITIVE
+_UI_StringIssnStyle_REQUIRE_HYPHEN_literal = REQUIRE_HYPHEN
+_UI_StringIssnStyle_STRICT_literal = STRICT
+_UI_IpAddressScope_NONE_literal = NONE
+_UI_IpAddressScope_IP4_literal = IP4
+_UI_IpAddressScope_IP6_literal = IP6
+_UI_IpAddressScope_ALL_literal = ALL
+_UI_IpAddressScope_IP4_NO_PRIV_literal = IP4_NO_PRIV
+_UI_IpAddressScope_IP6_NO_PRIV_literal = IP6_NO_PRIV
+_UI_IpAddressScope_ALL_NO_PRIV_literal = ALL_NO_PRIV
+_UI_IpAddressScope_IP4_NO_RES_literal = IP4_NO_RES
+_UI_IpAddressScope_IP6_NO_RES_literal = IP6_NO_RES
+_UI_IpAddressScope_ALL_NO_RES_literal = ALL_NO_RES
+_UI_IpAddressScope_IP4_PUBLIC_literal = IP4_PUBLIC
+_UI_IpAddressScope_IP6_PUBLIC_literal = IP6_PUBLIC
+_UI_IpAddressScope_ALL_PUBLIC_literal = ALL_PUBLIC
 _UI_UploadNamingScheme_ORIGINALWITHCOUNTER_literal = ORIGINALWITHCOUNTER
 _UI_UploadNamingScheme_RANDOMCHECKSUM_literal = RANDOMCHECKSUM
 _UI_UploadNamingScheme_FIELDNAMEWITHCOUNTER_literal = FIELDNAMEWITHCOUNTER
