--- a/production/de.guite.modulestudio.mostdsl.nl1.de/de/guite/modulestudio/validation/ValidationMessages_de.properties
+++ b/production/de.guite.modulestudio.mostdsl.nl1.de/de/guite/modulestudio/validation/ValidationMessages_de.properties
@@ -104,6 +104,8 @@ MostDslValidator.EntityFieldAbstractDateMustNotBePastAndFuture=Ein Wert kann nic
 MostDslValidator.EntityFieldAggregateNeedsLocking=Entitäten mit einem Aggregat-Feld sollten eine Locking-Strategie nutzen (optimistisches oder pessimistisches Lesen).
 MostDslValidator.EntityFieldAggregateNeedsValidRelation=Aggregat-Felder funktionieren nur in Kombination mit einer ausgehenden und bidirektionalen Eins-zu-Viele-Beziehung mit persist-Kaskade.
 MostDslValidator.EntityFieldAggregateNeedsValidSyntax=Die Benennung des aggregateFor-Attributes muss der Syntax targetAlias\#targetFieldName folgen (zum Beispiel views\#amount).
+MostDslValidator.EntityFieldArrayLimitsNeedBothMinAndMaxProperties=Das Erzwingen einer bestimmten Anzahl von Einträgen benötigt das Setzen beider min- und max-Eigenschaften.
+MostDslValidator.EntityFieldArrayMinLimitGreaterThanMaxLimit=Die maximale Anzahl erzwungener Einträge darf nicht kleiner sein als die minimale Anzahl erzwungener Einträge.
 MostDslValidator.EntityFieldDateMustNotBeStartAndEnd=Ein Wert kann nicht gleichzeitig sowohl Start- als auch Enddatum repräsentieren.
 MostDslValidator.EntityFieldDateNeedsValidDefaultValue=Der Standardwert für ein Datums-Feld muss dem Muster YYYY-MM-DD entsprechen oder now lauten.
 MostDslValidator.EntityFieldDateOnlyOneEndDate=Pro Entität darf nur ein Feld ein Enddatum repräsentieren.
@@ -124,8 +126,14 @@ MostDslValidator.EntityFieldIntegerMinMustNotGreaterMax=Der Minimalwert darf nic
 MostDslValidator.EntityFieldIntegerNeedsValidDefaultValue=Der Standardwert für ein Integer-Feld darf nur Ziffern enthalten.
 MostDslValidator.EntityFieldItemMustBeValidIdentifierIncludingWhitespace=Der Name muss ein gültiger Bezeichner sein (z. B. keine Sonderzeichen, aber Leerzeichen sind erlaubt): {0}.
 MostDslValidator.EntityFieldListCheckboxesNeedsMultiple=Nur Listen mit Mehrfachselektionen können aus Checkboxen bestehen.
+MostDslValidator.EntityFieldListMultipleItemAmountSmallerThanMinLimit=Die Anzahl der Listeneinträge darf nicht kleiner sein als die minimale Anzahl erzwungener Werte.
+MostDslValidator.EntityFieldListMultipleItemAmountSmallerThanMaxLimit=Die Anzahl der Listeneinträge darf nicht kleiner sein als die maximale Anzahl erzwungener Werte.
+MostDslValidator.EntityFieldListMultipleMinLimitGreaterThanMaxLimit=Die maximale Anzahl erzwungener Werte darf nicht kleiner sein als die minimale Anzahl erzwungener Werte.
+MostDslValidator.EntityFieldListMultipleNeedsAtLeastTwoItems=Listen mit Mehrfachselektionen müssen mindestens zwei Einträge beinhalten.
 MostDslValidator.EntityFieldListMustNotHaveTooManyDefaultItems=Die Liste ist nicht auf mehrfach gesetzt und kann daher nur einen als Standard markierten Eintrag enthalten.
 MostDslValidator.EntityFieldListNeedsItem=Die Liste muss mindestens einen Eintrag enthalten.
+MostDslValidator.EntityFieldListSingleMustNotHaveMinLimit=Nur Listen mit Mehrfachselektionen können eine Minimalanzahl ausgewählter Werte erzwingen.
+MostDslValidator.EntityFieldListSingleMustNotHaveMaxLimit=Nur Listen mit Mehrfachselektionen können eine Maximalanzahl ausgewählter Werte erzwingen.
 MostDslValidator.EntityFieldMandatoryMustNotBeNullable=Pflichtfelder dürfen nicht auch nullable sein.
 MostDslValidator.EntityFieldMaxValueTooLong=Der Maximalwert ist zu lang für die angegebene Feldlänge.
 MostDslValidator.EntityFieldMinValueTooLong=Der Minimalwert ist zu lang für die angegebene Feldlänge.
@@ -143,11 +151,16 @@ MostDslValidator.EntityFieldsMustNotBeTooLarge=Die Länge aller Felder der Entitä
 MostDslValidator.EntityFieldStringLengthMustNotBeGreaterMinLength=Die Größe des Strings muss größer sein als die minimale Länge.
 MostDslValidator.EntityFieldStringLengthMustNotBeTooLarge=Die Größe des Strings darf nicht größer sein als 255; für größere Daten verwende Text-Felder.
 MostDslValidator.EntityFieldStringLengthMustNotBeZero=Die Größe des Strings darf nicht kleiner als 1 sein.
-MostDslValidator.EntityFieldStringLengthMustNotLargeEnoughForCountry=Die String-Länge für Ländercodes muss mindestens zwei Zeichen sein.
-MostDslValidator.EntityFieldStringLengthMustNotLargeEnoughForHtmlColour=Die String-Länge für HTML-Farbcodes muss mindestens sieben Zeichen sein.
-MostDslValidator.EntityFieldStringLengthMustNotLargeEnoughForLanguage=Die String-Länge für Sprachcodes muss mindestens fünf Zeichen sein.
-MostDslValidator.EntityFieldStringMustBeOneOfCountryLanguageHtmlColourPassword=Ein String kann nur eines sein von Land, Sprache, HTML-Farbe und Kennwort.
-MostDslValidator.EntityFieldStringNeedsNospace=String-Felder für Länder, Sprachen und Farben müssen auch den nospace-Validator aktivieren.
+MostDslValidator.EntityFieldStringLengthMustNotLargeEnoughForCountry=Die String-Länge für Ländercodes muss mindestens zwei Zeichen betragen.
+MostDslValidator.EntityFieldStringLengthMustNotLargeEnoughForCreditCard=Die String-Länge für Kreditkartennummern muss mindestens 20 Zeichen betragen.
+MostDslValidator.EntityFieldStringLengthMustNotLargeEnoughForCurrency=Die String-Länge für Währungscodes muss mindestens drei Zeichen betragen.
+MostDslValidator.EntityFieldStringLengthMustNotLargeEnoughForHtmlColour=Die String-Länge für HTML-Farbcodes muss mindestens sieben Zeichen betragen.
+MostDslValidator.EntityFieldStringLengthMustNotLargeEnoughForIpAddress4=Die String-Länge für IPv4-Adressen muss mindestens 15 Zeichen betragen.
+MostDslValidator.EntityFieldStringLengthMustNotLargeEnoughForIpAddress6=Die String-Länge für IPv6-Adressen muss mindestens 39 Zeichen betragen.
+MostDslValidator.EntityFieldStringLengthMustNotLargeEnoughForLanguage=Die String-Länge für Sprachen muss mindestens sieben Zeichen betragen.
+MostDslValidator.EntityFieldStringLengthMustNotLargeEnoughForLocale=Die String-Länge für Sprachumgebungen muss mindestens fünf Zeichen betragen.
+MostDslValidator.EntityFieldStringMustBeOneOfExclusiveProperties=Ein String kann nur eines sein von Land, Währung, Sprache, Sprachumgebung, HTML-Farbe, IBAN, ISBN, ISSN, IP-Adresse und Kennwort.
+MostDslValidator.EntityFieldStringNeedsNospace=String-Felder für Länder, Währungen, Sprachen, Sprachumgebungen, IP-Adressen und Farben müssen auch den nospace-Validator aktivieren.
 MostDslValidator.EntityFieldTextBlobMustNotBeUnique=Felder, welche Text- oder Blob-Datentypen verwenden, dürfen nicht eindeutig (unique) sein (gilt für Text-, Array- und Objektfelder).
 MostDslValidator.EntityFieldTimeNeedsValidDefaultValue=Der Standardwert für ein Zeit-Feld muss dem Muster HH:MM:SS entsprechen oder now lauten.
 MostDslValidator.EntityFieldUploadMetaFieldMustNotExist=Es darf kein Feld namens {0} existieren, da dies reserviert ist für ein automatisches Feld zur Speicherung der Metadaten für diesen Upload.
@@ -263,6 +276,10 @@ MostDslValidator.RelationshipJoinCustomNeedsEqualTypes=Die Felder {0} und {1} mü
 MostDslValidator.RelationshipJoinManyToManyNeedsRefClass=Eine Viele-zu-Viele-Beziehung muss das refClass-Attribut definieren.
 MostDslValidator.RelationshipJoinManyToManyRefClassMustBeUnique=Das refClass-Attribut muss eindeutig sein für alle Beziehungen.
 MostDslValidator.RelationshipJoinManyToManyRefClassMustNotEqualEntity=Das refClass-Attribut darf nicht gleich dem Namen einer Entität sein.
+MostDslValidator.RelationshipJoinManyToManySourceLimitsNeedBothMinAndMaxProperties=Das Erzwingen einer bestimmten Anzahl von Einträgen auf der Quellseite benötigt das Setzen beider minSource- und maxSource-Eigenschaften.
+MostDslValidator.RelationshipJoinManyToManySourceMinLimitGreaterThanMaxLimit=Die maximale Anzahl erzwungener Einträge auf der Quellseite darf nicht kleiner sein als die minimale Anzahl erzwungener Einträge.
+MostDslValidator.RelationshipJoinManyToManyTargetLimitsNeedBothMinAndMaxProperties=Das Erzwingen einer bestimmten Anzahl von Einträgen auf der Zielseite benötigt das Setzen beider minTarget- und maxTarget-Eigenschaften.
+MostDslValidator.RelationshipJoinManyToManyTargetMinLimitGreaterThanMaxLimit=Die maximale Anzahl erzwungener Einträge auf der Zielseite darf nicht kleiner sein als die minimale Anzahl erzwungener Einträge.
 MostDslValidator.RelationshipJoinManyToOneMustBeUnidirectional=Eine Viele-zu-Eins-Beziehung darf nicht bidirektional sein.
 MostDslValidator.RelationshipJoinNeedsEqualColumnAmount=Die Anzahl der Join-Columns muss gleich sein für Quell- und Ziel-Seiten der Assoziation.
 MostDslValidator.RelationshipJoinNeedsSameCascadesBetweenTwoEntities=Zwischen zwei Entitäten darf es nicht mehrere Join-Beziehungen mit Kaskadierungsoptionen geben.
@@ -276,6 +293,8 @@ MostDslValidator.RelationshipJoinNeedsValidSourceField=Das sourceField-Attribut 
 MostDslValidator.RelationshipJoinNeedsValidSourceFieldType=Das Feld {0} muss ein Integer-Feld mit einer Länge von 11 sein.
 MostDslValidator.RelationshipJoinNeedsValidTargetField=Das targetField-Attribut muss entweder 'id' für automatischen Primärschlüssel oder eine kommaseparierte Liste von zu referenzierenden {0}-Feldern beinhalten. Beachte, dass das Trennzeichen ', ' ist, inklusive der Leertaste.
 MostDslValidator.RelationshipJoinNeedsValidTargetFieldType=Das Feld {0} muss ein Integer-Feld mit einer Länge von 11 sein.
+MostDslValidator.RelationshipJoinOneToManyTargetLimitsNeedBothMinAndMaxProperties=Das Erzwingen einer bestimmten Anzahl von Einträgen auf der Zielseite benötigt das Setzen beider minTarget- und maxTarget-Eigenschaften.
+MostDslValidator.RelationshipJoinOneToManyTargetMinLimitGreaterThanMaxLimit=Die maximale Anzahl erzwungener Einträge auf der Zielseite darf nicht kleiner sein als die minimale Anzahl erzwungener Einträge.
 MostDslValidator.RelationshipJoinSourceAliasesMustBeUnique=Die Quell-Aliase der Beziehung müssen eindeutig sein für alle eingehenden Beziehungen einer Entität.
 MostDslValidator.RelationshipJoinSourceAliasNameMustBeLonger=Das Quell-Alias der Beziehung muss eine Länge von mindestens zwei Zeichen haben.
 MostDslValidator.RelationshipJoinSourceAliasNameShouldBeLonger=Das Quell-Alias der Beziehung sollte eine Länge von mindestens vier Zeichen haben.
