--- a/production/de.guite.modulestudio.mostdsl.ui.nl1.de/de/guite/modulestudio/quickfix/QuickfixMessages_de.properties
+++ b/production/de.guite.modulestudio.mostdsl.ui.nl1.de/de/guite/modulestudio/quickfix/QuickfixMessages_de.properties
@@ -246,9 +246,11 @@ MostDslQuickfixProvider.ChangeTheEntityByDisablingTheGeographicalFlag=Die Entitä
 MostDslQuickfixProvider.ChangeTheEntityByDisablingTheLoggableFlag=Die Entität verändern durch Deaktivieren des Loggable-Flags
 MostDslQuickfixProvider.ChangeTheEntityNameByAppendingTheWordObject=Den Namen der Entität durch Anhängen des Wortes Object verändern
 MostDslQuickfixProvider.ChangeTheFieldToAMultipleList=Das Feld zu einer Mehrfachliste verändern
+MostDslQuickfixProvider.ChangeTheFieldToASingleList=Das Feld zu einer Einfachliste verändern
 MostDslQuickfixProvider.ChangeTheSourceContainerToTheNextAvailableOne=Den Quell-Container zum nächsten verfügbaren verändern
 MostDslQuickfixProvider.ChangeTheTargetContainerToTheNextAvailableOne=Den Ziel-Container zum nächsten verfügbaren verändern
 MostDslQuickfixProvider.ChangeToMultiple=In mehrfach ändern
+MostDslQuickfixProvider.ChangeToSingle=In einfach ändern
 MostDslQuickfixProvider.ChangeToNormalEntityByDisablingTheMappedSuperclassFlag=Zu einer normalen Entität verändern durch Deaktivieren des Flags für gemappte Oberklassen
 MostDslQuickfixProvider.ClearModelPath=Modellpfad zurücksetzen
 MostDslQuickfixProvider.Container=Container
@@ -301,7 +303,11 @@ MostDslQuickfixProvider.EnableExternalControllerDesc=Generierung des externen Co
 MostDslQuickfixProvider.ExampleForAnotherModel=library/another.mostdsl
 MostDslQuickfixProvider.Extend=Erweitern
 MostDslQuickfixProvider.IncreaseFieldLength=Feldlänge erhöhen
+MostDslQuickfixProvider.IncreaseFieldLengthTo15=Feldlänge auf 15 erhöhen
 MostDslQuickfixProvider.IncreaseFieldLengthTo2=Feldlänge auf 2 erhöhen
+MostDslQuickfixProvider.IncreaseFieldLengthTo20=Feldlänge auf 20 erhöhen
+MostDslQuickfixProvider.IncreaseFieldLengthTo3=Feldlänge auf 3 erhöhen
+MostDslQuickfixProvider.IncreaseFieldLengthTo39=Feldlänge auf 39 erhöhen
 MostDslQuickfixProvider.IncreaseFieldLengthTo5=Feldlänge auf 5 erhöhen
 MostDslQuickfixProvider.IncreaseFieldLengthTo7=Feldlänge auf 7 erhöhen
 MostDslQuickfixProvider.IncreaseLengthOfFieldToASensitiveMinimumValue=Länge des Feldes auf einen vernünftigen Minimalwert erhöhen
@@ -352,10 +358,14 @@ MostDslQuickfixProvider.RemoveAllTransitionsBetweenTheTwoActionsExceptTheFirstOn
 MostDslQuickfixProvider.RemoveAllTransitionsBetweenTheTwoActionsExceptTheLastOne=Alle Übergänge zwischen den zwei Aktionen außer dem letzten entfernen
 MostDslQuickfixProvider.RemoveColourFlag=Das colour-Flag entfernen
 MostDslQuickfixProvider.RemoveCountryFlag=Das country-Flag entfernen
+MostDslQuickfixProvider.RemoveCreditCardFlag=Das creditCard-Flag entfernen
+MostDslQuickfixProvider.RemoveCurrencyFlag=Das currency-Flag entfernen
 MostDslQuickfixProvider.RemoveTheDbName=Den DB Namen entfernen
 MostDslQuickfixProvider.RemoveDeleteActionFromTheController=Die Delete-Aktion vom Controller '{0}' entfernen
 MostDslQuickfixProvider.RemoveGeographicalFlag=Das geographical-Flag entfernen
+MostDslQuickfixProvider.RemoveIpAddressSetting=IP-Adresse entfernen
 MostDslQuickfixProvider.RemoveLanguageFlag=Das language-Flag entfernen
+MostDslQuickfixProvider.RemoveLocaleFlag=Das locale-Flag entfernen
 MostDslQuickfixProvider.RemoveLayoutOrder=Layout Order entfernen
 MostDslQuickfixProvider.RemoveLoggableFlag=Das loggable-Flag entfernen
 MostDslQuickfixProvider.RemoveMandatoryFlag=Das mandatory-Flag entfernen
@@ -363,13 +373,12 @@ MostDslQuickfixProvider.RemoveNullableFlag=Das nullable-Flag entfernen
 MostDslQuickfixProvider.RemoveOwnerPermissionFlag=Das ownerPermission-Flag entfernen
 MostDslQuickfixProvider.RemovePrimaryKeyFlag=Das PK-Flag entfernen
 MostDslQuickfixProvider.RemoveSuperclassFlag=superclass-Flag entfernen
-MostDslQuickfixProvider.RemoveTheCountryFlag=Das country-Flag entfernen
 MostDslQuickfixProvider.RemoveTheElement=Das Element entfernen
 MostDslQuickfixProvider.RemoveTheField=Das Feld entfernen
 MostDslQuickfixProvider.RemoveTheHtmlColourFlag=Das html colour-Flag entfernen
 MostDslQuickfixProvider.RemoveTheInheritanceRelationship=Die Vererbungsbeziehung entfernen
 MostDslQuickfixProvider.RemoveTheInvalidIndexItem=Den ungültigen Index-Eintrag entfernen
-MostDslQuickfixProvider.RemoveTheLanguageFlag=Das language-Flag entfernen
+MostDslQuickfixProvider.RemoveTheIpAddressSetting=Die IP-Adressen-Einstellung entfernen
 MostDslQuickfixProvider.RemoveTheLayoutOrderElement=Das Layout Order Element entfernen
 MostDslQuickfixProvider.RemoveTheOutgoingOneToManyRelationship=Die ausgehende Eins-zu-Viele-Beziehung entfernen
 MostDslQuickfixProvider.RemoveTheRelation=Die Beziehung entfernen
@@ -407,6 +416,8 @@ MostDslQuickfixProvider.SetEntityLockTypeToOptimistic=Lock-Typ der Entität auf o
 MostDslQuickfixProvider.SetEntityLockTypeToOptimisticWithPageLockSupport=Lock-Typ der Entität auf optimistisch mit PageLock-Support setzen
 MostDslQuickfixProvider.SetEntityLockTypeToPessimisticRead=Lock-Typ der Entität auf pessimistisches Lesen setzen
 MostDslQuickfixProvider.SetEntityLockTypeToPessimisticReadWithPageLockSupport=Lock-Typ der Entität auf pessimistisches Lesen mit PageLock-Support setzen
+MostDslQuickfixProvider.SetMaximumLimitToZero=Das Maximallimit auf null setzen
+MostDslQuickfixProvider.SetMinimumLimitToZero=Das Minimallimit auf null setzen
 MostDslQuickfixProvider.SetsTheIdentifierStrategyToNone=Die Identifier-Strategie auf NONE setzen
 MostDslQuickfixProvider.SetTheDefaultValueToAFixedExample=Den Standardwert auf ein fixes Beispiel setzen
 MostDslQuickfixProvider.SetTheDefaultValueToNow=Den Standardwert auf now setzen
@@ -420,8 +431,15 @@ MostDslQuickfixProvider.UnsetAllSortablePositionFlagsExceptTheFirstOne=Alle sort
 MostDslQuickfixProvider.UnsetAllStartDatesExceptThisOne=Alle Startdatum-Flags außer diesem zurücksetzen
 MostDslQuickfixProvider.UnsetAllVersionFlagsExceptThisOne=Alle version-Flags außer diesem zurücksetzen
 MostDslQuickfixProvider.UnsetsAllFlagsExceptCountry=Alle Flags außer country zurücksetzen
+MostDslQuickfixProvider.UnsetsAllFlagsExceptCredictCard=Alle Flags außer creditCard zurücksetzen
+MostDslQuickfixProvider.UnsetsAllFlagsExceptCurrency=Alle Flags außer currency zurücksetzen
 MostDslQuickfixProvider.UnsetsAllFlagsExceptHtmlColour=Alle Flags außer html colour zurücksetzen
+MostDslQuickfixProvider.UnsetsAllFlagsExceptIban=Alle Flags außer iban zurücksetzen
+MostDslQuickfixProvider.UnsetsAllFlagsExceptIsbn=Alle Flags außer isbn zurücksetzen
+MostDslQuickfixProvider.UnsetsAllFlagsExceptIssn=Alle Flags außer issn zurücksetzen
+MostDslQuickfixProvider.UnsetsAllFlagsExceptIpAddress=Alle Flags außer ip address zurücksetzen
 MostDslQuickfixProvider.UnsetsAllFlagsExceptLanguage=Alle Flags außer language zurücksetzen
+MostDslQuickfixProvider.UnsetsAllFlagsExceptLocale=Alle Flags außer locale zurücksetzen
 MostDslQuickfixProvider.UnsetsAllFlagsExceptPassword=Alle Flags außer password zurücksetzen
 MostDslQuickfixProvider.UnsetsAllPrimaryKeyFlagsExceptTheFirstOne=Alle primary key-Flags außer dem ersten zurücksetzen
 MostDslQuickfixProvider.UnsetLeadingFieldFlags=Das leading-Flag für alle Felder zurücksetzen
@@ -441,9 +459,16 @@ MostDslQuickfixProvider.UnsetTheUniqueFlag=Das unique-Flag zurücksetzen
 MostDslQuickfixProvider.UnsetTheVersionFlag=Das version-Flag zurücksetzen
 MostDslQuickfixProvider.UseAsColour=Als Farbe verwenden
 MostDslQuickfixProvider.UseAsCountry=Als Land verwenden
+MostDslQuickfixProvider.UseAsCreditCard=Als Kreditkarte verwenden
+MostDslQuickfixProvider.UseAsCurrency=Als Währung verwenden
 MostDslQuickfixProvider.UseAsEndDate=Als Enddatum verwenden
 MostDslQuickfixProvider.UseAsFuture=Als Zukunft verwenden
+MostDslQuickfixProvider.UseAsIban=Als IBAN verwenden
+MostDslQuickfixProvider.UseAsIsbn=Als ISBN verwenden
+MostDslQuickfixProvider.UseAsIssn=Als ISSN verwenden
+MostDslQuickfixProvider.UseAsIpAddress=Als IP-Adresse verwenden
 MostDslQuickfixProvider.UseAsLanguage=Als Sprache verwenden
+MostDslQuickfixProvider.UseAsLocale=Als Sprachumgebung verwenden
 MostDslQuickfixProvider.UseAsPassword=Als Kennwort verwenden
 MostDslQuickfixProvider.UseAsPast=Als Vergangenheit verwenden
 MostDslQuickfixProvider.UseAsSortableField=Als Sortierfeld verwenden
