--- a/production/de.guite.modulestudio.metamodel.edit.nl1.de/plugin_de.properties
+++ b/production/de.guite.modulestudio.metamodel.edit.nl1.de/plugin_de.properties
@@ -183,6 +183,8 @@ _UI_SettingsContainer_application_feature = Anwendung
 _UI_SettingsContainer_application_description = Referenz zur enthaltenden Anwendung.
 _UI_SettingsContainer_targetCoreVersion_feature = Ziel Core Version
 _UI_SettingsContainer_targetCoreVersion_description = Zikula-Version, für welche die Anwendung generiert werden soll.
+_UI_SettingsContainer_isSystemModule_feature = Ist System-Modul
+_UI_SettingsContainer_isSystemModule_description = Ob das Modell ein Systemmodul beschreibt oder nicht.
 _UI_SettingsContainer_generateAccountApi_feature = Benutzerkonto Api generieren
 _UI_SettingsContainer_generateAccountApi_description = Ob eine Integration ins Benutzerkonto generiert werden soll oder nicht.
 _UI_SettingsContainer_generateSearchApi_feature = Suche Api generieren
