added support for different handlers to react on user account deletion

--- a/production/de.guite.modulestudio.metamodel.edit.nl1.de/plugin_de.properties
+++ b/production/de.guite.modulestudio.metamodel.edit.nl1.de/plugin_de.properties
@@ -329,6 +329,10 @@ _UI_Entity_tree_feature = Tree
 _UI_Entity_tree_description = Ob und welche Art von Baumstruktur verwendet werden soll.
 _UI_Entity_mappedSuperClass_feature = Gemappte Oberklasse
 _UI_Entity_mappedSuperClass_description = Ob dies eine gemappte Oberklasse ist oder eine normale Entität.
+_UI_Entity_onAccountDeletionCreator_feature = Bei Account-Löschung Ersteller
+_UI_Entity_onAccountDeletionCreator_description = Kontrolliert, wie eine App den Ersteller verändern soll, wenn Benutzer gelöscht werden.
+_UI_Entity_onAccountDeletionLastEditor_feature = Bei Account-Löschung Letzter Editor
+_UI_Entity_onAccountDeletionLastEditor_description = Kontrolliert, wie eine App den letzten Editor verändern soll, wenn Benutzer gelöscht werden.
 _UI_Entity_workflow_feature = Workflow
 _UI_Entity_workflow_description = Der Workflow, der auf diese Entität angewendet wird.
 _UI_Entity_hasArchive_feature = Hat Archiv
@@ -435,6 +439,8 @@ _UI_StringField_password_feature = Passwort
 _UI_StringField_password_description = Ob dieses Feld ein Kennwort repräsentiert oder nicht.
 _UI_TextField_length_feature = Länge
 _UI_TextField_length_description = Die Länge dieses Feldes.
+_UI_UserField_onAccountDeletion_feature = Bei Account-Löschung
+_UI_UserField_onAccountDeletion_description = Kontrolliert, wie eine App das Feld verändern soll, wenn Benutzer gelöscht werden.
 _UI_EmailField_length_feature = Länge
 _UI_EmailField_length_description = Die Länge dieses Feldes.
 _UI_EmailField_checkMX_feature = MX-Check
@@ -765,6 +771,9 @@ _UI_EntityTreeType_CLOSURE_literal = CLOSURE
 _UI_EntityWorkflowType_NONE_literal = NONE
 _UI_EntityWorkflowType_STANDARD_literal = STANDARD
 _UI_EntityWorkflowType_ENTERPRISE_literal = ENTERPRISE
+_UI_AccountDeletionHandler_ADMIN_literal = ADMIN
+_UI_AccountDeletionHandler_GUEST_literal = GUEST
+_UI_AccountDeletionHandler_DELETE_literal = DELETE
 _UI_EntitySlugStyle_LOWERCASE_literal = LOWERCASE
 _UI_EntitySlugStyle_UPPERCASE_literal = UPPERCASE
 _UI_EntitySlugStyle_CAMEL_literal = CAMEL
