added email notifications about moderated workflow state changes

--- a/production/de.guite.modulestudio.mostdsl.nl1.de/de/guite/modulestudio/validation/ValidationMessages_de.properties
+++ b/production/de.guite.modulestudio.mostdsl.nl1.de/de/guite/modulestudio/validation/ValidationMessages_de.properties
@@ -245,6 +245,7 @@ MostDslValidator.EntityTreeMustNotContainReservedField=Daher dürfen Deine Felder
 MostDslValidator.EntityTreeMustNotContainReservedSource=Daher darf Deine Referenz diese Quell-Aliase nicht enthalten.
 MostDslValidator.EntityTreeMustNotContainReservedTarget=Daher darf Deine Referenz diese Ziel-Aliase nicht enthalten.
 MostDslValidator.EntityWithArchiveRequiresEndDate=Entitäten mit einem Archiv müssen ein Zeitstempel- oder Datumsfeld enthalten, welches als Enddatum ausgezeichnet ist.
+MostDslValidator.EntityWithEnhancedWorkflowNeedsStandardFields=Entitäten mit erweiterten Workflows benötigen Standardfelder zur Identifikationd es Erstellers.
 MostDslValidator.FormLabelNeedsField=Das Label muss auf ein Feld verweisen.
 MostDslValidator.LayoutOrderMustNotBeSelfRelation=Eine Layout Order kann nicht zu sich selbst verlinken.
 MostDslValidator.LayoutOrderMustNotMultipleBetweenTwoContainers=Es darf nicht mehr als eine Layout Order zwischen zwei Containern geben.
