--- a/production/de.guite.modulestudio.mostdsl.ui.nl1.de/de/guite/modulestudio/quickfix/QuickfixMessages_de.properties
+++ b/production/de.guite.modulestudio.mostdsl.ui.nl1.de/de/guite/modulestudio/quickfix/QuickfixMessages_de.properties
@@ -359,6 +359,7 @@ MostDslQuickfixProvider.RemoveCountryFlag=Das country-Flag entfernen
 MostDslQuickfixProvider.RemoveCreditCardFlag=Das creditCard-Flag entfernen
 MostDslQuickfixProvider.RemoveCurrencyFlag=Das currency-Flag entfernen
 MostDslQuickfixProvider.RemoveTheDbName=Den DB Namen entfernen
+MostDslQuickfixProvider.RemoveEnhancedWorkflow=Den erweiterten Workflow entfernen
 MostDslQuickfixProvider.RemoveDeleteActionFromTheController=Die Delete-Aktion vom Controller '{0}' entfernen
 MostDslQuickfixProvider.RemoveGeographicalFlag=Das geographical-Flag entfernen
 MostDslQuickfixProvider.RemoveIpAddressSetting=IP-Adresse entfernen
