added support for new uuid validation constraint introduced in Symfony 2.5

--- a/production/de.guite.modulestudio.metamodel.edit.nl1.de/plugin_de.properties
+++ b/production/de.guite.modulestudio.metamodel.edit.nl1.de/plugin_de.properties
@@ -437,6 +437,8 @@ _UI_StringField_ipAddress_feature = IP-Adresse
 _UI_StringField_ipAddress_description = Erlaubt die Einstellung, ob dieses Feld eine IP-Adresse repräsentiert.
 _UI_StringField_password_feature = Passwort
 _UI_StringField_password_description = Ob dieses Feld ein Kennwort repräsentiert oder nicht.
+_UI_StringField_uuid_feature = UUID
+_UI_StringField_uuid_description = Ob dieses Feld eine UUID repräsentiert oder nicht.
 _UI_TextField_length_feature = Länge
 _UI_TextField_length_description = Die Länge dieses Feldes.
 _UI_UserField_onAccountDeletion_feature = Bei Account-Löschung
