--- a/production/de.guite.modulestudio.mostdsl.nl1.de/de/guite/modulestudio/validation/ValidationMessages_de.properties
+++ b/production/de.guite.modulestudio.mostdsl.nl1.de/de/guite/modulestudio/validation/ValidationMessages_de.properties
@@ -157,8 +157,9 @@ MostDslValidator.EntityFieldStringLengthMustNotLargeEnoughForIpAddress4=Die Stri
 MostDslValidator.EntityFieldStringLengthMustNotLargeEnoughForIpAddress6=Die String-Länge für IPv6-Adressen muss mindestens 39 Zeichen betragen.
 MostDslValidator.EntityFieldStringLengthMustNotLargeEnoughForLanguage=Die String-Länge für Sprachen muss mindestens sieben Zeichen betragen.
 MostDslValidator.EntityFieldStringLengthMustNotLargeEnoughForLocale=Die String-Länge für Sprachumgebungen muss mindestens fünf Zeichen betragen.
-MostDslValidator.EntityFieldStringMustBeOneOfExclusiveProperties=Ein String kann nur eines sein von Land, Währung, Sprache, Sprachumgebung, HTML-Farbe, IBAN, ISBN, ISSN, IP-Adresse und Kennwort.
-MostDslValidator.EntityFieldStringNeedsNospace=String-Felder für Länder, Währungen, Sprachen, Sprachumgebungen, IP-Adressen und Farben müssen auch den nospace-Validator aktivieren.
+MostDslValidator.EntityFieldStringLengthMustNotLargeEnoughForUuid=Die String-Länge für UUIDs muss mindestens 36 Zeichen betragen.
+MostDslValidator.EntityFieldStringMustBeOneOfExclusiveProperties=Ein String kann nur eines sein von Land, Währung, Sprache, Sprachumgebung, HTML-Farbe, IBAN, ISBN, ISSN, IP-Adresse, Kennwort und UUID.
+MostDslValidator.EntityFieldStringNeedsNospace=String-Felder für Länder, Währungen, Sprachen, Sprachumgebungen, IP-Adressen, Farben und UUIDs müssen auch den nospace-Validator aktivieren.
 MostDslValidator.EntityFieldTextBlobMustNotBeUnique=Felder, welche Text- oder Blob-Datentypen verwenden, dürfen nicht eindeutig (unique) sein (gilt für Text-, Array- und Objektfelder).
 MostDslValidator.EntityFieldTimeNeedsValidDefaultValue=Der Standardwert für ein Zeit-Feld muss dem Muster HH:MM:SS entsprechen oder now lauten.
 MostDslValidator.EntityFieldUploadMetaFieldMustNotExist=Es darf kein Feld namens {0} existieren, da dies reserviert ist für ein automatisches Feld zur Speicherung der Metadaten für diesen Upload.
