--- a/production/de.guite.modulestudio.mostdsl.ui.nl1.de/de/guite/modulestudio/quickfix/QuickfixMessages_de.properties
+++ b/production/de.guite.modulestudio.mostdsl.ui.nl1.de/de/guite/modulestudio/quickfix/QuickfixMessages_de.properties
@@ -306,6 +306,7 @@ MostDslQuickfixProvider.IncreaseFieldLengthTo15=Feldlänge auf 15 erhöhen
 MostDslQuickfixProvider.IncreaseFieldLengthTo2=Feldlänge auf 2 erhöhen
 MostDslQuickfixProvider.IncreaseFieldLengthTo20=Feldlänge auf 20 erhöhen
 MostDslQuickfixProvider.IncreaseFieldLengthTo3=Feldlänge auf 3 erhöhen
+MostDslQuickfixProvider.IncreaseFieldLengthTo36=Feldlänge auf 36 erhöhen
 MostDslQuickfixProvider.IncreaseFieldLengthTo39=Feldlänge auf 39 erhöhen
 MostDslQuickfixProvider.IncreaseFieldLengthTo5=Feldlänge auf 5 erhöhen
 MostDslQuickfixProvider.IncreaseFieldLengthTo7=Feldlänge auf 7 erhöhen
@@ -383,7 +384,9 @@ MostDslQuickfixProvider.RemoveTheOutgoingOneToManyRelationship=Die ausgehende Ei
 MostDslQuickfixProvider.RemoveTheRelation=Die Beziehung entfernen
 MostDslQuickfixProvider.RemoveTheRelationship=Die Beziehung entfernen
 MostDslQuickfixProvider.RemoveTheUnrequiredSlugField=Das unbenötigte slug-Feld entfernen
+MostDslQuickfixProvider.RemoveTheUuidFlag=Das UUID-Flag entfernen
 MostDslQuickfixProvider.RemoveUniqueFlag=Das unique-Flag entfernen
+MostDslQuickfixProvider.RemoveUuidFlag=Das UUID-Flag entfernen
 MostDslQuickfixProvider.RemoveVersionFlag=Das version-Flag entfernen
 MostDslQuickfixProvider.RenameTheElementsUsingACounter=Die Elemente mit einem Zähler umbenennen
 MostDslQuickfixProvider.RenameThePositionsUsingACounter=Die Positionen mit einem Zähler umbenennen
@@ -440,6 +443,7 @@ MostDslQuickfixProvider.UnsetsAllFlagsExceptIpAddress=Alle Flags außer ip addres
 MostDslQuickfixProvider.UnsetsAllFlagsExceptLanguage=Alle Flags außer language zurücksetzen
 MostDslQuickfixProvider.UnsetsAllFlagsExceptLocale=Alle Flags außer locale zurücksetzen
 MostDslQuickfixProvider.UnsetsAllFlagsExceptPassword=Alle Flags außer password zurücksetzen
+MostDslQuickfixProvider.UnsetsAllFlagsExceptUuid=Alle Flags außer uuid zurücksetzen
 MostDslQuickfixProvider.UnsetsAllPrimaryKeyFlagsExceptTheFirstOne=Alle primary key-Flags außer dem ersten zurücksetzen
 MostDslQuickfixProvider.UnsetTheAggregateFlag=Das aggregate-Flag zurücksetzen
 MostDslQuickfixProvider.UnsetTheArchiveFlag=Das Archiv-Flag zurücksetzen
@@ -472,6 +476,7 @@ MostDslQuickfixProvider.UseAsPast=Als Vergangenheit verwenden
 MostDslQuickfixProvider.UseAsSortableField=Als Sortierfeld verwenden
 MostDslQuickfixProvider.UseAsSortableGroup=Als Sortiergruppierung verwenden
 MostDslQuickfixProvider.UseAsStartDate=Als Startdatum verwenden
+MostDslQuickfixProvider.UseAsUuid=Als UUID verwenden
 MostDslQuickfixProvider.UseFirst=Den ersten verwenden
 MostDslQuickfixProvider.UseFirstOne=Den ersten verwenden
 MostDslQuickfixProvider.UseTheFirstActionRemoveTheOthers=Die erste Aktion verwenden, die anderen entfernen
